[S3KMD-643] correcting overflowing on card item.

--- a/swinburne-aem-prototype/source/scss/components/_pagelist.scss
+++ b/swinburne-aem-prototype/source/scss/components/_pagelist.scss
@@ -285,7 +285,7 @@ $border-color: #1d1f20;
         @include media-breakpoint-up(xl) {
           height: auto;
         }
-        overflow: visible;
+        overflow: hidden;
       }
     }
     .card {
